fix image links

--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
     <div class="container-fluid">
       <h2>Gallery</h2>
       <div class="row">
-        <div class="col-md-4"><img src="file:///Users/lilianaballesteros/Desktop/codecademy/portfolio/img/gallery/gallery-01.jpg"   alt="first"></div>
-        <div class="col-md-4"><img src="file:///Users/lilianaballesteros/Desktop/codecademy/portfolio/img/gallery/gallery-02.jpg"   alt="first"></div>
-        <div class="col-md-4"><img src="file:///Users/lilianaballesteros/Desktop/codecademy/portfolio/img/gallery/gallery-03.jpg"    alt="first"></div>
+        <div class="col-md-4"><img src="img/gallery/gallery-01.jpg"   alt="first"></div>
+        <div class="col-md-4"><img src="img/gallery/gallery-02.jpg"   alt="first"></div>
+        <div class="col-md-4"><img src="img/gallery/gallery-03.jpg"    alt="first"></div>
       </div>
 
       <div class="row">
-        <div class="col-md-4"><img src="file:///Users/lilianaballesteros/Desktop/codecademy/portfolio/img/gallery/gallery-04.jpg"  alt="first"></div>
-        <div class="col-md-4"><img src="file:///Users/lilianaballesteros/Desktop/codecademy/portfolio/img/gallery/gallery-05.jpg"  alt="first"></div>
-        <div class="col-md-4"><img src="file:///Users/lilianaballesteros/Desktop/codecademy/portfolio/img/gallery/gallery-06.jpg"   alt="first"></div>
+        <div class="col-md-4"><img src="img/gallery/gallery-04.jpg"  alt="first"></div>
+        <div class="col-md-4"><img src="img/gallery/gallery-05.jpg"  alt="first"></div>
+        <div class="col-md-4"><img src="img/gallery/gallery-06.jpg"   alt="first"></div>
       </div>
       <div class="row">
-        <div class="col-md-4"><img src="file:///Users/lilianaballesteros/Desktop/codecademy/portfolio/img/gallery/gallery-07.jpg"  alt="first"></div>
-        <div class="col-md-4"><img src="file:///Users/lilianaballesteros/Desktop/codecademy/portfolio/img/gallery/gallery-08.jpg"   alt="first"></div>
-        <div class="col-md-4"><img src="file:///Users/lilianaballesteros/Desktop/codecademy/portfolio/img/gallery/gallery-09.jpg"   alt="first"></div>
+        <div class="col-md-4"><img src="img/gallery/gallery-07.jpg"  alt="first"></div>
+        <div class="col-md-4"><img src="img/gallery/gallery-08.jpg"   alt="first"></div>
+        <div class="col-md-4"><img src="img/gallery/gallery-09.jpg"   alt="first"></div>
       </div></div></div>
 
   <div class="container-fluid bridge hero"></div>
@@ -59,9 +59,9 @@
   <a href="mailto:someone@example.com"><button  type="button" class="cta">Contact</button></a>
 
   <div id="social">
-  <a href="http://www.twitter.com"> <img src="file:///Users/lilianaballesteros/Desktop/codecademy/portfolio/img/icons/twitter.svg"  alt="Twitter"></a>
-   <a href="http://www.instagram.com"> <img src="file:///Users/lilianaballesteros/Desktop/codecademy/portfolio/img/icons/instagram.svg" alt="Instagram"></a>
-  <a href="http://www.medium.com"> <img  src="file:///Users/lilianaballesteros/Desktop/codecademy/portfolio/img/icons/medium.svg"  alt="Medium"></a></div></div></div>
+  <a href="http://www.twitter.com"> <img src="img/icons/twitter.svg"  alt="Twitter"></a>
+   <a href="http://www.instagram.com"> <img src="img/icons/instagram.svg" alt="Instagram"></a>
+  <a href="http://www.medium.com"> <img src="img/icons/medium.svg"  alt="Medium"></a></div></div></div>
 
 <div id="footer">
   <div class="footer-item">
